dockerYk8s/simplek8s/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: yeasy/simple-web:latest
      ports:
        - containerPort: 80
