dockerYk8s/simplek8s/client-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port
spec:
  type: NodePort
  ports: #ver que es un array
    - port: 83 # otro pod puede acceder a la info por este puerto
      targetPort: 80 #puerto del container
      nodePort: 31515 # puerto al exteriror 300000-32767
  selector:
    component: web #busca el componente con el label web, key:value
